syntax = "proto3";

package payment;
option go_package = "proto/paymentpb;paymentpb";

import "google/protobuf/timestamp.proto";

// ============ Messages ============

message PaymentDetails {
  string payment_method = 1; // credit_card, debit_card, paypal, bank_transfer
  string status = 2; // pending, processing, completed, failed, refunded
  string transaction_id = 3;
  string reference_id = 4;
  google.protobuf.Timestamp processed_at = 5;
}

message Payment {
  string id = 1;
  string order_id = 2;
  string user_id = 3;
  double amount = 4;
  string currency = 5; // USD, EUR, etc
  string payment_method = 6;
  string status = 7; // pending, processing, completed, failed, refunded
  string transaction_id = 8;
  string reference_id = 9;
  double processing_fee = 10;
  string error_message = 11;
  google.protobuf.Timestamp created_at = 12;
  google.protobuf.Timestamp updated_at = 13;
}

message ProcessPaymentRequest {
  string order_id = 1;
  string user_id = 2;
  double amount = 3;
  string currency = 4;
  string payment_method = 5; // credit_card, debit_card, paypal, bank_transfer
  PaymentCard card = 6; // required for card payments
}

message PaymentCard {
  string card_number = 1;
  string card_holder = 2;
  string expiry_month = 3;
  string expiry_year = 4;
  string cvv = 5;
}

message ProcessPaymentResponse {
  string payment_id = 1;
  string order_id = 2;
  string transaction_id = 3;
  string status = 4; // completed, pending, failed
  double amount = 5;
  double processing_fee = 6;
  string message = 7;
}

message GetPaymentRequest {
  string payment_id = 1;
}

message GetPaymentResponse {
  string id = 1;
  string order_id = 2;
  string user_id = 3;
  double amount = 4;
  string currency = 5;
  string payment_method = 6;
  string status = 7;
  string transaction_id = 8;
  string reference_id = 9;
  double processing_fee = 10;
  google.protobuf.Timestamp created_at = 11;
  google.protobuf.Timestamp updated_at = 12;
}

message ListPaymentsRequest {
  string user_id = 1;
  int32 page = 2;
  int32 page_size = 3;
  string status_filter = 4; // optional: filter by status
}

message ListPaymentsResponse {
  repeated Payment payments = 1;
  int32 total_count = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message ListOrderPaymentsRequest {
  string order_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message ListOrderPaymentsResponse {
  repeated Payment payments = 1;
  int32 total_count = 2;
}

message RefundPaymentRequest {
  string payment_id = 1;
  double refund_amount = 2; // optional: partial refund amount
  string reason = 3;
}

message RefundPaymentResponse {
  string refund_id = 1;
  string original_payment_id = 2;
  double refund_amount = 3;
  string status = 4; // pending, completed, failed
  string reason = 5;
  string transaction_id = 6;
  google.protobuf.Timestamp created_at = 7;
}

message VerifyPaymentRequest {
  string payment_id = 1;
  string transaction_id = 2;
}

message VerifyPaymentResponse {
  string payment_id = 1;
  bool is_verified = 2;
  string status = 3;
  string message = 4;
}

message PaymentStatistics {
  string period = 1; // daily, weekly, monthly
  int32 total_transactions = 2;
  double total_amount = 3;
  double average_amount = 4;
  string most_used_method = 5;
  double success_rate = 6;
}

message GetPaymentStatsRequest {
  int32 user_id = 1;
  string period = 2; // daily, weekly, monthly
}

message GetPaymentStatsResponse {
  PaymentStatistics statistics = 1;
}

message ValidatePaymentRequest {
  string order_id = 1;
  double expected_amount = 2;
}

message ValidatePaymentResponse {
  bool is_valid = 1;
  string message = 2;
}

// ============ Service Definition ============

service PaymentService {
  rpc ProcessPayment(ProcessPaymentRequest) returns (ProcessPaymentResponse);
  rpc GetPayment(GetPaymentRequest) returns (GetPaymentResponse);
  rpc ListPayments(ListPaymentsRequest) returns (ListPaymentsResponse);
  rpc ListOrderPayments(ListOrderPaymentsRequest) returns (ListOrderPaymentsResponse);
  rpc RefundPayment(RefundPaymentRequest) returns (RefundPaymentResponse);
  rpc VerifyPayment(VerifyPaymentRequest) returns (VerifyPaymentResponse);
  rpc ValidatePayment(ValidatePaymentRequest) returns (ValidatePaymentResponse);
  rpc GetPaymentStats(GetPaymentStatsRequest) returns (GetPaymentStatsResponse);
}

// ============ Generate Go Code ============
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative payment.proto